@@ -1,0 +1,5 @@
+gtk+-2.0
+gdk-2.0
+pango
+atk
+cairo
